removing minio-mirror endpoint
